--- a/templates/vector.toml.j2
+++ b/templates/vector.toml.j2
@@ -18,10 +18,17 @@ data_dir = "{{ vector_data_dir }}"
 
 # Input data. Change me to a valid input source.
 [sources.in]
-  type = "stdin"
+  type = "file"
+  ignore_older_secs = 600
+  include = [ "/media/logs/*.log" ]
+  read_from = "beginning"
 
 # Output data
 [sinks.out]
   inputs   = ["in"]
-  type     = "console"
-  encoding = "text"
+  type     = "clickhouse"
+  database = "logs"
+  table = "syslog"
+  healthcheck = false
+  skip_unknown_fields = true
+  endpoint = "http://127.0.0.1:8123"
